--- a/src/components/custom/modal/Modal.module.css
+++ b/src/components/custom/modal/Modal.module.css
@@ -13,7 +13,7 @@
 
 .modalDialog {
     width: 100%;
-    max-width: 550px;
+  /*  max-width: 550px;*/
     position: relative;
     margin: 0 20px;
     max-height: calc(100vh - 40px);
