--- a/src/components/custom/modal/Modal.module.css
+++ b/src/components/custom/modal/Modal.module.css
@@ -1,58 +1,61 @@
 .modal {
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.25);
- }
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.25);
+}
 
 .modalDialog {
-    width: 100%;
-    max-width: 550px;
-    position: relative;
-    margin: 0 20px;
-    max-height: calc(100vh - 40px);
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    transition: width 30s;
-    transition-delay: 10s;
+  width: 100%;
+  max-width: 550px;
+  position: relative;
+  margin: 0 20px;
+  max-height: calc(100vh - 40px);
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: width 30s;
+  transition-delay: 10s;
 }
 
 .modalHeader,
 .modalFooter {
-    display: flex;
-    align-items: center;
-    padding: 15px;
+  display: flex;
+  align-items: center;
+  padding: 15px;
 }
 .modalHeader {
-    background-color: #61dafb;
-    border-bottom: 1px solid #dbdbdb;
-    justify-content: space-between;
+  background-color: #61dafb;
+  border-bottom: 1px solid #dbdbdb;
+  justify-content: space-between;
 }
 .modalFooter {
-    justify-content: center;
-    background-color: #ffffff;
+  justify-content: center;
+  background-color: #ffffff;
 }
 .modalFooter > button {
-   width: 60px;
-   height: 25px;
-   cursor: pointer;
+  width: 60px;
+  height: 25px;
+  cursor: pointer;
 }
 .modalClose {
-    cursor: pointer;
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
 }
-
+.close {
+  width: 100%;
+  height: 100%;
+}
 .modalContent {
-    padding: 15px;
-    background-color: #ffffff;
+  padding: 15px;
+  background-color: #ffffff;
 }
-
-
