--- a/src/components/custom/modal/Modal.module.css
+++ b/src/components/custom/modal/Modal.module.css
@@ -28,13 +28,15 @@
 
 .modalHeader,
 .modalFooter {
+  height: 12px;
   display: flex;
   align-items: center;
   padding: 15px;
 }
 .modalHeader {
-  background-color: #61dafb;
   border-bottom: 1px solid #dbdbdb;
+  color: #ffffff;
+  font-weight: bold;
   justify-content: space-between;
 }
 .modalFooter {
@@ -46,16 +48,20 @@
   height: 25px;
   cursor: pointer;
 }
-.modalClose {
+
+.close {
   cursor: pointer;
   width: 25px;
   height: 25px;
+  color: #ffffff;
 }
-.close {
-  width: 100%;
-  height: 100%;
+.contentIcon {
+  margin-right: 15px;
+  width: 40px;
+  height: 40px;
 }
 .modalContent {
+  display: flex;
   padding: 15px;
   background-color: #ffffff;
 }
