--- a/src/components/custom/modal/Modal.module.css
+++ b/src/components/custom/modal/Modal.module.css
@@ -14,8 +14,7 @@
 .modalDialog {
   width: 100%;
   max-width: 550px;
-  position: relative;
-  margin: 0 20px;
+  /*position: relative;*/
   max-height: calc(100vh - 40px);
   text-align: left;
   display: flex;
@@ -28,12 +27,13 @@
 
 .modalHeader,
 .modalFooter {
-  height: 12px;
+  width: 100%;
+  height: 40px;
   display: flex;
   align-items: center;
-  padding: 15px;
 }
 .modalHeader {
+  background: #61dafb;
   border-bottom: 1px solid #dbdbdb;
   color: #ffffff;
   font-weight: bold;
@@ -48,7 +48,9 @@
   height: 25px;
   cursor: pointer;
 }
-
+.modalHeader > p {
+  margin-left: 15px;
+}
 .close {
   cursor: pointer;
   width: 25px;
@@ -64,4 +66,5 @@
   display: flex;
   padding: 15px;
   background-color: #ffffff;
+  align-items: center;
 }
