--- a/src/components/custom/modal/Modal.module.css
+++ b/src/components/custom/modal/Modal.module.css
@@ -25,7 +25,15 @@
   transition-delay: 10s;
 }
 
-.modalHeader,
+.modalHeader {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  padding: 5px 0px;
+}
+
 .modalFooter {
   width: 100%;
   height: 40px;
@@ -55,10 +63,9 @@
   cursor: pointer;
   width: 25px;
   height: 25px;
-  color: #ffffff;
+  margin-right: 10px;
 }
 .contentIcon {
-  margin-right: 15px;
   width: 40px;
   height: 40px;
 }
