--- a/src/components/toCardPage/recordItem/RecordItem.module.css
+++ b/src/components/toCardPage/recordItem/RecordItem.module.css
@@ -2,12 +2,14 @@
     display: flex;
     justify-content: space-between;
 }
+.wrapperUserInfo {
+    width: 100%
+}
 .wrapperCard {
-    padding: 25px 25px;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     gap: 15px;
-    word-wrap: break-word;
 }
 .title {
     padding: 25px 0 0 25px;
@@ -27,17 +29,8 @@
     align-items: center;
 }
 .buttonsWrapper {
-    padding-left: 25px;
-    width: 250px;
+    width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-}
-.wrapperCardUser {
-    padding: 15px 15px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    word-wrap: break-word;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
