--- a/src/pages/card/CardPage.module.css
+++ b/src/pages/card/CardPage.module.css
@@ -1,3 +1,6 @@
+.wrapperCardPage {
+    padding: 15px;
+}
 .title {
     padding: 0 0 0 25px;
     font-size: 20px;
@@ -14,4 +17,8 @@
 .personalCardDiv {
     display: flex;
     flex-direction: column
+}
+
+.editButton {
+    width: 100px
 }
